Alterado as assinaturas dos métodos executar de todos usecases que requisitavam um objeto do tipo BuscarPessoaPorId, removendo essa requisição e adicionando a criação desse objeto no corpo dessas classes, assim a invocação desses métodos pela infraestrutura se torna mais amigável. Criada também a função de editar endereço de uma pessoa. Por fim nesse commit também foi realizado uma melhora na organização dos pacotes no usecase referente a pessoa